# QtJsonSerializer

./: .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  QJsonSerializer.pro  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  appveyor.yml  cborserializer_8h_source.html  class_q_basic_mutex.html  class_q_exception.html  class_q_json_deserialization_exception-members.html  class_q_json_deserialization_exception.html  class_q_json_serialization_exception-members.html  class_q_json_serialization_exception.html  class_q_json_serializer-members.html  class_q_json_serializer.html  class_q_json_serializer_exception-members.html  class_q_json_serializer_exception.html  class_q_json_type_converter-members.html  class_q_json_type_converter.html  class_q_json_type_converter_1_1_serialization_helper-members.html  class_q_json_type_converter_1_1_serialization_helper.html  class_q_object.html  class_qt_json_serializer_1_1_cbor_serializer-members.html  class_qt_json_serializer_1_1_cbor_serializer.html  class_qt_json_serializer_1_1_deserialization_exception-members.html  class_qt_json_serializer_1_1_deserialization_exception.html  class_qt_json_serializer_1_1_exception-members.html  class_qt_json_serializer_1_1_exception.html  class_qt_json_serializer_1_1_json_serializer-members.html  class_qt_json_serializer_1_1_json_serializer.html  class_qt_json_serializer_1_1_meta_writers_1_1_associative_writer-members.html  class_qt_json_serializer_1_1_meta_writers_1_1_associative_writer.html  class_qt_json_serializer_1_1_meta_writers_1_1_associative_writer_factory-members.html  class_qt_json_serializer_1_1_meta_writers_1_1_associative_writer_factory.html  class_qt_json_serializer_1_1_meta_writers_1_1_sequential_writer-members.html  class_qt_json_serializer_1_1_meta_writers_1_1_sequential_writer.html  class_qt_json_serializer_1_1_meta_writers_1_1_sequential_writer_factory-members.html  (+136 more)
.github/workflows/: build.yml
GadgetSerializerTest/: GadgetSerializerTest.pro  brokentestgadget.h  testgadget.cpp  tst_gadgetserializer.cpp
ObjectSerializerTest/: ObjectSerializerTest.pro  brokentestobject.cpp  brokentestobject.h  testobject.cpp  testobject.h  tst_objectserializer.cpp
SerializerTest/: SerializerTest.pro  testobject.cpp  testobject.h  tst_serializer.cpp
doc/: Doxyfile  _qjsonserializer_helpertypes.dox  cborserializer.dox  doc.pro  doxme.py  jsonserializer.dox  makedoc.sh  metawriters.dox  qjsonserializer.dox  qjsontypeconverter.dox  qtjsonserializer.dox  serializerbase.dox  typeconverter.dox  typeextractor.dox
examples/: examples.pro
examples/jsonserializer/: jsonserializer.pro
lib/: lib.pro  make_module.sh  qt_lib_jsonserializer.pri
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+142 more)
src/: QJsonSerializer  QJsonSerializerException  QtJsonSerializer  qjsonserializer.cpp  qjsonserializer.h  qjsonserializerexception.cpp  qjsonserializerexception.h  serializerexception.cpp  serializerexception.h  src.pro
src/jsonserializer/: cborserializer.cpp  cborserializer.h  cborserializer_p.h  exception.cpp  exception.h  exception_p.h  exceptioncontext.cpp  exceptioncontext_p.h  jsonserializer.cpp  jsonserializer.h  jsonserializer.pro  jsonserializer_p.h  metawriters.cpp  metawriters.h  metawriters_p.h  qcborserializer.cpp  qcborserializer.h  qcborserializer_p.h  qcbortypeconverter.cpp  qcbortypeconverter.h  qcontainerwriters.cpp  qcontainerwriters.h  qcontainerwriters_p.h  qjsonconverterreg.cpp.template  qjsonexceptioncontext.cpp  qjsonexceptioncontext_p.h  qjsonreggen.pri  qjsonreggen.py  qjsonserializer.cpp  qjsonserializer.h  qjsonserializer_global.h  qjsonserializer_helpertypes.h  qjsonserializer_p.h  qjsonserializerbase.cpp  qjsonserializerbase.h  qjsonserializerbase_p.h  qjsonserializerexception.cpp  qjsonserializerexception.h  qjsonserializerexception_p.h  qjsontypeconverter.cpp  (+13 more)
tests/: tests.pro
tests/auto/: auto.pro  testrun.pri
(+192 files in other folders)
